# stonks

./: README.md  main.py  pyproject.toml  stocks.csv  stocks.json  tmp.py
